2011-08-15 Tamino Dauth <tamino@cdauth.eu>
* mpq: Fixed sector offset.
* mpq: Compression type is detected in class Sector's member function now.
* mpq: Added testing decompression support for imploded files which are compressed, as well.

2011-08-14 Tamino Dauth <tamino@cdauth.eu>
* mpq: Block size is used for sector size calculation now.

2011-08-12 Tamino Dauth <tamino@cdauth.eu>
* mpq: File header is refreshed automatically now when path is set by searching for hash value.

2011-08-11 Tamino Dauth <tamino@cdauth.eu>
* mpq: Added sector offset table decryption.
* mpq: Added file path check to file header read function.

2011-08-08 Tamino Dauth <tamino@cdauth.eu>
* mpq: Dropped invalid block flag check.
* mpq: Sector size and shift are unsigned now.
* mpq: Sector data reading should consider invalid compression or implosion as described in MPQ specification now.

2011-08-07 Tamino Dauth <tamino@cdauth.eu>
* mpq: Improved API documentation.
* mpq: Made some classes non-copyable.
* mpq: Added copy constructor and assignment operator to class HashData.

2011-08-06 Tamino Dauth <tamino@cdauth.eu>
* mpq: Fixed wrong sectors number (see TODO).

2011-08-05 Tamino Dauth <tamino@cdauth.eu>
* app: Added boost::filesystem::path workaround to application "mpq".

2011-07-31 Tamino Dauth <tamino@cdauth.eu>
* editor: Fixed member function hasEditor() of class Module.

2011-07-30 Tamino Dauth <tamino@cdauth.eu>
* mdlx: Doesn't require OgreMain for linking anymore (bug).

2011-07-28 Tamino Dauth <tamino@cdauth.eu>
* editor: Implemented initial locale and platform id path resolution support in class KArchive.
* editor: Improved functionality of classes MpqProtocol and MpqArchive.

2011-07-27 Tamino Dauth <tamino@cdauth.eu>
* editor: Implemented first real KArchive I/O Slave support for MPQ protocol based on class ArchiveProtocol of the KDE project.

2011-07-23 Tamino Dauth <tamino@cdauth.eu>